--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         }
 
         header {
-            background-color: red;
+            background-color: #2980b9;
             color: #fff;
             padding: 10px;
             text-align: center;
@@ -60,9 +60,8 @@
             line-height: 1.6;
         }
 
-
         footer {
-            background-color: red;
+            background-color: #2980b9;
             color: #fff;
             text-align: center;
             padding: 30px;
@@ -76,7 +75,8 @@
 
         footer #socialmedia{
             display: flex;
-            flex-direction: column;
+            flex-direction: row;
+            gap: 10px;
         }
     </style>
 </head>
@@ -86,6 +86,7 @@
         <nav>
             <ul>
                 <li><a href="#">Início</a></li>
+                <li><a href="#">Projetos</a></li>
                 <li><a href="#">Sobre nós</a></li>
                 <li><a href="#">Contato</a></li>
             </ul>
@@ -99,23 +100,23 @@
         </section>
         <section>
             <h2>Nossa Equipe</h2>
-            <p>A equipe da Social Connect é ...</p>
+            <p>A equipe da Social Connect é formada por profissionais altamente qualificados e dedicados a entregar soluções inovadoras e de alta qualidade para nossos clientes. Nossa força vem da diversidade de habilidades e da paixão pelo que fazemos.</p>
             <img src="imagens/equipe.jpg" alt="Nossa Equipe">
         </section>
         <section>
-            <h2>Aqui deve conter uma seção de Contato</h2>
-            <p>xxxxxxxxxx</p>
-            <p>xxxxxxxxxx</p>
-            <p>xxxxxxxxxxx</p>
+            <h2>Contato</h2>
+            <p>Telefone: (11) 99999-9999</p>
+            <p>E-mail: contato@socialconnect.com</p>
+            <p>Horário de atendimento: Segunda a Sexta, 9h às 18h</p>
         </section>
     </main>
     <footer>
         <section>
-        <p>&copy; 2021 Soia Cnnt. Tds s dritos rsedos.</p>
+        <p>&copy; 2024 Social Connect. Todos os direitos reservados.</p>
         </section>
         <section id="socialmedia">
-            <span>xxxxx</span>
-            <span>xxxxxx</span>
+            <a href="https://linkedin.com/in/social_connect" target="_blank">LinkedIn</a>
+            <a href="https://instagram.com/social_connect" target="_blank">Instagram</a>
         </section>
     </footer>
 </body>
